--- a/app/App/Taxonomy/Edit/Edit.html
+++ b/app/App/Taxonomy/Edit/Edit.html
@@ -65,3 +65,4 @@
         <div class="col-sm-4 pl-0 pr-0 bg-white" ng-include="'App/Taxonomy/tpl/entities.html'"></div>
     </div>
 </main>
+<div ng-include="'App/tpl/modal-helpSource.html'"></div>
