--- a/app/System/Navbar/Navbar.html
+++ b/app/System/Navbar/Navbar.html
@@ -7,10 +7,15 @@
             <h1><a ui-sref="transcript.app.home" ng-bind="preferences.projectTitle"></a></h1>
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav nav nav-justified">
-                    <li class="nav-item" ng-if="preferences.discoverHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.discoverHomeContent})">découvrir</a></li>
-                    <li class="nav-item" ng-if="preferences.helpHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.helpHomeContent})">guides</a></li>
                     <li class="nav-item"><a class="nav-link" ui-sref="transcript.app.blog">actualités</a></li>
-                    <li class="nav-item"><a class="nav-link" ui-sref="transcript.app.search">rechercher</a></li>
+                    <li class="nav-item" ng-if="preferences.discoverHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.discoverHomeContent})">découvrir</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">transcrire</a>
+                        <div class="dropdown-menu">
+                            <a><a class="dropdown-item" ui-sref="transcript.app.search"><i class="fa fa-search"></i> Rechercher</a></a>
+                            <a><a class="dropdown-item" ui-sref="transcript.app.content({id: preferences.helpHomeContent})"><i class="fa fa-question"></i> Aide</a></a>
+                        </div>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">documenter</a>
                         <div class="dropdown-menu">
@@ -19,6 +24,7 @@
                             <a><a class="dropdown-item" ui-sref="transcript.app.taxonomy.list({type: 'military-units'})">Les unités militaires</a></a>
                         </div>
                     </li>
+                    <li class="nav-item" ng-if="preferences.aboutContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.aboutContent})">a propos</a></li>
                 </ul>
             </div>
         </nav>
