--- a/app/Admin/Home/Home.html
+++ b/app/Admin/Home/Home.html
@@ -59,7 +59,7 @@
         <div class="col-sm-4 mb-5">
             <h2>Commentaires</h2>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><a ui-sref="transcript.admin.comments">Liste des derniers commentaires</a></li>
+                <li class="list-group-item"><a ui-sref="transcript.admin.comments">Liste des derniers commentaires <span class="badge bg-info" ng-bind="unReadComments"></span></a></li>
             </ul>
         </div>
         <div class="col-sm-4 mb-5">
