--- a/app/index.html
+++ b/app/index.html
@@ -155,6 +155,8 @@
     <script type="text/javascript" src="App/Taxonomy/List/List.js"></script>
     <script type="text/javascript" src="App/Taxonomy/View/View.js"></script>
     <script type="text/javascript" src="App/Training/Training.js"></script>
+    <script type="text/javascript" src="App/Training/Exercise/Exercise.js"></script>
+    <script type="text/javascript" src="App/Training/Presentation/Presentation.js"></script>
     <script type="text/javascript" src="App/Transcript/Transcript.js"></script>
     <script type="text/javascript" src="App/User/User.js"></script>
     <script type="text/javascript" src="App/User/Avatar/Avatar.js"></script>
