--- a/app/App/Taxonomy/tpl/entities.html
+++ b/app/App/Taxonomy/tpl/entities.html
@@ -16,7 +16,8 @@
     <ul ng-if="results.length > 0">
         <li ng-repeat="iEntity in results|limitTo:itemsPerPage:(currentPage*itemsPerPage-itemsPerPage)">
             <a ng-if="iEntity.id != entity.id" ui-sref="transcript.app.taxonomy.view({type: entity.dataType, id: iEntity.id})" class="ng-binding ng-scope">
-                {{ iEntity | taxonomyEntityNameConstruct:entity.dataType:'index' }}
+                <span ng-if="entity.dataType == 'testators' || entity.dataType == 'places'">{{ iEntity | taxonomyEntityNameConstruct:entity.dataType:'index' }}</span>
+                <span ng-if="entity.dataType == 'military-units'">{{ iEntity | taxonomyEntityNameConstruct:entity.dataType }}</span>
                 <span ng-if="entity.dataType == 'places' && (iEntity.frenchDepartements.length > 0 || iEntity.frenchRegions.length > 0 || iEntity.countries.length > 0)">
                     (
                         <span ng-if="iEntity.frenchDepartements.length > 0">{{ iEntity | taxonomyEntityNameConstruct:'places':'frenchDepartements' }}</span>
@@ -26,7 +27,8 @@
                 </span>
             </a>
             <span ng-if="iEntity.id == entity.id">
-                {{ iEntity | taxonomyEntityNameConstruct:entity.dataType }}
+                <span ng-if="entity.dataType == 'testators' || entity.dataType == 'places'">{{ iEntity | taxonomyEntityNameConstruct:entity.dataType:'index' }}</span>
+                <span ng-if="entity.dataType == 'military-units'">{{ iEntity | taxonomyEntityNameConstruct:entity.dataType }}</span>
                 <span ng-if="entity.dataType == 'places' && (iEntity.frenchDepartements.length > 0 || iEntity.frenchRegions.length > 0 || iEntity.countries.length > 0)">
                     (
                         <span ng-if="iEntity.frenchDepartements.length > 0">{{ iEntity | taxonomyEntityNameConstruct:'places':'frenchDepartements' }}</span>
